--- a/src/assets/css/stile.css
+++ b/src/assets/css/stile.css
@@ -2,6 +2,15 @@ body{
     font-family: 'Titillium Web', sans-serif;
 }
 
+.my-link{
+    color: black;
+    text-decoration: none;
+}
+
+.riga{
+    margin-top: 2em;
+}
+
 .hello{
     
 }
